Progress commit for discipline datapack registry